Added support for tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,18 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.17)
 PROJECT(YrinVM)
 
-OPTION(EXECUTOR_LOG "Executor should print debug log ?" ON)
-OPTION(LOADER_LOG "Loader should print debug log ?" ON)
-OPTION(RUN_TESTS "Loader should print debug log ?" OFF)
+OPTION(EXECUTOR_LOG ON)
+OPTION(LOADER_LOG ON)
+OPTION(RUN_TESTS OFF)
 
-IF (EXECUTOR_LOG)
-    ADD_DEFINITIONS(-DEXECUTOR_LOG)
-ENDIF (EXECUTOR_LOG)
-
-IF (LOADER_LOG)
-    ADD_DEFINITIONS(-DLOADER_LOG)
-ENDIF (LOADER_LOG)
+IF (CMAKE_BUILD_TYPE MATCHES Debug)
+    IF (EXECUTOR_LOG)
+        ADD_DEFINITIONS(-DEXECUTOR_LOG)
+    ENDIF (EXECUTOR_LOG)
+    IF (LOADER_LOG)
+        ADD_DEFINITIONS(-DLOADER_LOG)
+    ENDIF (LOADER_LOG)
+ENDIF ()
 
 SET(CMAKE_CXX_STANDARD 20)
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
