Updated assembler to support long long. Added instructions for long long. Templating added for add, sub, mul, div, mod and push. Added python venv.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ ENDIF ()
 SET(CMAKE_CXX_STANDARD 17)
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
 
-SET(SOURCE src/main.cpp src/yvm.hpp src/common/yrin_defs.hpp src/common/yrin_error.hpp src/common/yrin_code_metadata.hpp src/runtime/yrin_datatypes.hpp src/loader/yrin_loader.cpp src/runtime/yrin_vm.cpp src/runtime/yrin_vm.hpp src/runtime/yrin_operations.cpp)
+SET(SOURCE src/main.cpp src/yvm.hpp src/common/yrin_defs.hpp src/common/yrin_error.hpp src/common/yrin_code_metadata.hpp src/runtime/yrin_datatypes.hpp src/loader/yrin_loader.cpp src/runtime/yrin_vm.cpp src/runtime/yrin_vm.hpp src/runtime/yrin_operations.cpp src/runtime/yrin_stack.hpp)
 
 IF (RUN_TESTS)
     ADD_EXECUTABLE(YrinVM tests/run_tests.cpp ${SOURCE})
