--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,10 +14,10 @@ IF (CMAKE_BUILD_TYPE MATCHES Debug)
     ENDIF ()
 ENDIF ()
 
-SET(CMAKE_CXX_STANDARD 17)
+SET(CMAKE_CXX_STANDARD 20)
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
 
-SET(SOURCE src/main.cpp src/yvm.hpp src/common/yrin_defs.hpp src/common/yrin_error.hpp src/common/yrin_code_metadata.hpp src/runtime/yrin_datatypes.hpp src/loader/yrin_loader.cpp src/runtime/yrin_vm.cpp src/runtime/yrin_vm.hpp src/runtime/yrin_operations.cpp src/runtime/yrin_stack.hpp)
+SET(SOURCE src/main.cpp src/yvm.hpp src/common/yrin_defs.hpp src/common/yrin_error.hpp src/common/yrin_code_metadata.hpp src/runtime/yrin_datatypes.hpp src/loader/yrin_loader.cpp src/runtime/yrin_vm.cpp src/runtime/yrin_vm.hpp src/runtime/yrin_operations.cpp src/runtime/yrin_stack.hpp src/runtime/yrin_stack.cpp)
 
 IF (RUN_TESTS MATCHES ON)
     ADD_EXECUTABLE(YrinVM tests/run_tests.cpp ${SOURCE})
