Code directories changed. Added "include" and "server". Added cmake build (YrinVM_server).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,10 +17,17 @@ ENDIF ()
 SET(CMAKE_CXX_STANDARD 20)
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
 
-SET(SOURCE src/main.cpp src/yvm.hpp src/common/yrin_defs.hpp src/common/yrin_error.hpp src/common/yrin_code_metadata.hpp src/runtime/yrin_datatypes.hpp src/loader/yrin_loader.cpp src/runtime/yrin_vm.cpp src/runtime/yrin_vm.hpp src/runtime/yrin_operations.cpp src/runtime/yrin_stack.hpp src/runtime/yrin_stack.cpp)
+INCLUDE_DIRECTORIES(include)
+SET(SOURCE
+        src/yrin_loader.cpp
+        src/yrin_vm.cpp
+        src/yrin_operations.cpp
+        src/yrin_stack.cpp)
 
 IF (RUN_TESTS MATCHES ON)
-    ADD_EXECUTABLE(YrinVM tests/run_tests.cpp ${SOURCE})
+    ADD_EXECUTABLE(YrinVM tests/main_tests.cpp ${SOURCE})
 ELSE ()
     ADD_EXECUTABLE(YrinVM src/main.cpp ${SOURCE})
 ENDIF ()
+
+ADD_EXECUTABLE(YrinVM_server server/main_server.cpp ${SOURCE})
