--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,5 +31,5 @@ ELSE ()
 ENDIF ()
 
 INCLUDE_DIRECTORIES(vendor/asio_1_18_1/include)
-ADD_EXECUTABLE(YrinVM_server server/main_server.cpp ${SOURCE})
+ADD_EXECUTABLE(YrinVM_server server/yrin_server.cpp server/main_server.cpp ${SOURCE})
 ADD_EXECUTABLE(YrinVM_client server/main_client.cpp)
